[gd_scene load_steps=20 format=3 uid="uid://djpgwfhqbxfi2"]

[ext_resource type="Shader" uid="uid://b3mhd7qe7y4du" path="res://resources/visual_shader/trademark_blue.tres" id="1_rky7e"]
[ext_resource type="Theme" uid="uid://cw13xaerpch24" path="res://resources/theme/general.theme" id="2_e16di"]
[ext_resource type="LabelSettings" uid="uid://0choly6ya1o1" path="res://resources/label_settings/subtitle.tres" id="3_bax4s"]
[ext_resource type="Shader" uid="uid://cpq3uhr4vunkl" path="res://resources/visual_shader/white_cpu.tres" id="4_4exxx"]
[ext_resource type="Texture2D" uid="uid://vk5vyae4yroi" path="res://resources/imported_resources/hardw_cpu-sheet0.png" id="5_jim6u"]
[ext_resource type="FontFile" uid="uid://ces8cy0k1egmf" path="res://resources/font/lato-bold-webfont.ttf" id="6_m8ng4"]
[ext_resource type="LabelSettings" uid="uid://cjtke0ijps10s" path="res://resources/label_settings/default_style.tres" id="7_tl45y"]
[ext_resource type="Script" path="res://scripts/init_main_play.gd" id="8_5fj2s"]
[ext_resource type="LabelSettings" uid="uid://5bef3mnr8xka" path="res://resources/label_settings/main_title.tres" id="9_e7jlu"]
[ext_resource type="Texture2D" uid="uid://bn34o80wt3ove" path="res://resources/imported_resources/mm_fullscreen-sheet0.png" id="10_oy37t"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_25i0a"]
shader = ExtResource("1_rky7e")

[sub_resource type="GDScript" id="GDScript_lglvs"]
script/source = "extends Button

@onready var newgamepanel = get_tree().get_root().get_node(\"/root/Control/StartGamePanel\")

func _pressed():
	newgamepanel.visible = !newgamepanel.visible
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_25wry"]
shader = ExtResource("4_4exxx")

[sub_resource type="LabelSettings" id="LabelSettings_o8q82"]
font = ExtResource("6_m8ng4")
font_size = 64

[sub_resource type="GDScript" id="GDScript_6cvpq"]
resource_name = "LoadGame"
script/source = "extends Button

func _pressed():
	push_error(\"Not implemented\")
"

[sub_resource type="GDScript" id="GDScript_w36mk"]
resource_name = "ShowSettings"
script/source = "extends Button

@onready var MainPanel = get_tree().get_root().get_node(\"/root/Control/MainPanel\")
@onready var SettingsPanel = get_tree().get_root().get_node(\"/root/Control/SettingsPanel\")

func _pressed():
	
	MainPanel.visible = !MainPanel.visible
	SettingsPanel.visible = !SettingsPanel.visible

"

[sub_resource type="GDScript" id="GDScript_kspvl"]
resource_name = "ShowAbout"
script/source = "extends Button

@onready var AboutPanel = get_tree().get_root().get_node(\"/root/Control/AboutPanel\")

func _pressed():
	AboutPanel.visible = !AboutPanel.visible
"

[sub_resource type="GDScript" id="GDScript_owij1"]
resource_name = "ReturnToMainMenuFromSettings"
script/source = "extends Button

@onready var MainPanel = get_tree().get_root().get_node(\"/root/Control/MainPanel\")
@onready var SettingsPanel = get_tree().get_root().get_node(\"/root/Control/SettingsPanel\")

func _pressed():
	
	MainPanel.visible = !MainPanel.visible
	SettingsPanel.visible = !SettingsPanel.visible

"

[sub_resource type="GDScript" id="GDScript_21fol"]
resource_name = "fullscreen_control"
script/source = "extends TextureButton


# Called when the node enters the scene tree for the first time.
func _pressed():
	var current_mode = DisplayServer.window_get_mode()
	var fullscreen_off = load(\"res://resources/imported_resources/mm_fullscreen-sheet0.png\")
	var fullscreen_on = load(\"res://resources/imported_resources/mm_fullscreen-sheet1.png\")
	if current_mode == DisplayServer.WINDOW_MODE_WINDOWED:
		DisplayServer.window_set_mode(DisplayServer.WINDOW_MODE_FULLSCREEN)
		set_texture_normal(fullscreen_on)
		set_texture_hover(fullscreen_off)
	else:
		DisplayServer.window_set_mode(DisplayServer.WINDOW_MODE_WINDOWED)
		set_texture_normal(fullscreen_off)
		set_texture_hover(fullscreen_on)
"

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainPanel" type="Panel" parent="."]
material = SubResource("ShaderMaterial_25i0a")
layout_mode = 0
offset_right = 1024.0
offset_bottom = 576.0

[node name="NewGameButton" type="Button" parent="MainPanel"]
layout_mode = 0
offset_left = 384.0
offset_top = 192.0
offset_right = 640.0
offset_bottom = 256.0
theme = ExtResource("2_e16di")
text = "New Game"
script = SubResource("GDScript_lglvs")

[node name="GodotLabel" type="Label" parent="MainPanel"]
layout_mode = 0
offset_left = 640.0
offset_top = 110.0
offset_right = 792.0
offset_bottom = 145.0
text = "for Godot 4"
label_settings = ExtResource("3_bax4s")
horizontal_alignment = 1

[node name="HardwCpu-sheet0" type="Sprite2D" parent="MainPanel"]
material = SubResource("ShaderMaterial_25wry")
position = Vector2(232, 88)
texture = ExtResource("5_jim6u")

[node name="TitleLabel" type="Label" parent="MainPanel"]
layout_mode = 0
offset_left = 288.0
offset_top = 32.0
offset_right = 800.0
offset_bottom = 128.0
text = "Hardware Tycoon"
label_settings = SubResource("LabelSettings_o8q82")
horizontal_alignment = 1

[node name="LoadGameButton" type="Button" parent="MainPanel"]
layout_mode = 0
offset_left = 384.0
offset_top = 272.0
offset_right = 640.0
offset_bottom = 336.0
theme = ExtResource("2_e16di")
disabled = true
text = "Load"
script = SubResource("GDScript_6cvpq")

[node name="SettingsButton" type="Button" parent="MainPanel"]
layout_mode = 0
offset_left = 384.0
offset_top = 352.0
offset_right = 640.0
offset_bottom = 418.0
theme = ExtResource("2_e16di")
text = "Settings"
script = SubResource("GDScript_w36mk")

[node name="AboutButton" type="Button" parent="MainPanel"]
layout_mode = 0
offset_left = 384.0
offset_top = 432.0
offset_right = 640.0
offset_bottom = 498.0
theme = ExtResource("2_e16di")
text = "About"
script = SubResource("GDScript_kspvl")

[node name="BugLabel" type="Label" parent="MainPanel"]
layout_mode = 0
offset_left = 8.0
offset_top = 548.0
offset_right = 490.0
offset_bottom = 571.0
text = "In early development, report all bugs to the GitHub repository."
label_settings = ExtResource("7_tl45y")
horizontal_alignment = 1

[node name="StartGamePanel" type="Panel" parent="."]
visible = false
layout_mode = 2
offset_left = 672.0
offset_top = 192.0
offset_right = 992.0
offset_bottom = 400.0

[node name="NewGameLabel" type="Label" parent="StartGamePanel"]
layout_mode = 2
offset_left = 96.0
offset_top = 8.0
offset_right = 224.0
offset_bottom = 43.0
text = "New Game"
label_settings = ExtResource("3_bax4s")
horizontal_alignment = 1

[node name="StartNewGame" type="Button" parent="StartGamePanel"]
layout_mode = 2
offset_left = 112.0
offset_top = 160.0
offset_right = 208.0
offset_bottom = 192.0
text = "Start Game"
script = ExtResource("8_5fj2s")

[node name="CompanyName" type="LineEdit" parent="StartGamePanel"]
layout_mode = 2
offset_left = 32.0
offset_top = 56.0
offset_right = 288.0
offset_bottom = 88.0
placeholder_text = "Company Name"
max_length = 40

[node name="CEOFirstName" type="LineEdit" parent="StartGamePanel"]
layout_mode = 2
offset_left = 32.0
offset_top = 104.0
offset_right = 152.0
offset_bottom = 136.0
placeholder_text = "First Name"
max_length = 40

[node name="CEOLastName" type="LineEdit" parent="StartGamePanel"]
layout_mode = 0
offset_left = 168.0
offset_top = 105.0
offset_right = 288.0
offset_bottom = 137.0
placeholder_text = "Last Name"
max_length = 40

[node name="SettingsPanel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 24.0
offset_top = 26.0
offset_right = 1000.0
offset_bottom = 550.0

[node name="Label" type="Label" parent="SettingsPanel"]
layout_mode = 0
offset_left = 426.0
offset_top = 20.0
offset_right = 551.0
offset_bottom = 65.0
text = "Settings"
label_settings = ExtResource("9_e7jlu")

[node name="ExitSettingsButton" type="Button" parent="SettingsPanel"]
layout_mode = 0
offset_left = 462.0
offset_top = 476.0
offset_right = 508.0
offset_bottom = 507.0
text = "Back"
script = SubResource("GDScript_owij1")

[node name="Label2" type="Label" parent="SettingsPanel"]
layout_mode = 0
offset_left = 440.0
offset_top = 248.0
offset_right = 544.0
offset_bottom = 271.0
text = "Nothing yet..."

[node name="AboutPanel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 28.0
offset_top = 49.0
offset_right = 400.0
offset_bottom = 528.0

[node name="Label" type="Label" parent="AboutPanel"]
layout_mode = 0
offset_left = 143.0
offset_top = 16.0
offset_right = 237.0
offset_bottom = 61.0
text = "About"
label_settings = ExtResource("9_e7jlu")

[node name="RichTextLabel" type="RichTextLabel" parent="AboutPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 61.0
offset_right = 354.0
offset_bottom = 135.0
bbcode_enabled = true
text = "Hardware Tycoon for Godot 4 is an open source recreation of the original Hardware Tycoon by Haxor1337."

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 944.0
offset_top = 496.0
offset_right = 1016.0
offset_bottom = 568.0
texture_normal = ExtResource("10_oy37t")
texture_pressed = ExtResource("10_oy37t")
texture_hover = ExtResource("10_oy37t")
stretch_mode = 0
script = SubResource("GDScript_21fol")
